syntax = "proto3";

package ir.sndu.server;

message ResponseSeq {
  int32 seq = 1;
  bytes state = 2;
}

message ResponseSeqDate {
  int32 seq = 1;
  bytes state = 2;
  int64 date = 3;
}

