syntax = "proto3";

package ir.sndu.server;

import "api/apifile.proto";

enum ApiGroupType {
    General = 0;
    Channel = 1;
}

message ApiGroupOutPeer {
    int32 id = 1;
    int64 accessHash = 2;
}

message ApiGroup {
    int32 id = 1;
    int64 access_hash = 2;
    string title = 3;
    Avatar avater = 4;
    int32 membersCount = 5;
    ApiGroupType groupType = 6;

}

message ApiMember {
    int32 user_id = 1;
    int32 inviter_user_id = 2;
    int64 date = 3;
    bool is_admin = 4;
}

message ApiFullGroup {
    int32 id = 1;
    int64 createDate = 2;
    int32 ownerUserId = 3;
    repeated ApiMember members = 4;
    string about = 5;
}